##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-12-23	tboggs <tboggs@users.sourceforge.net>

    Make selection rectangle disappear when canceling selection and stay when
    selection is complete.

    * graphics/spypylab:
      (ImageViewKeyboardHandler.on_key_release): Suppress cancellation message
       if mouse was never clicked. Hide rectangle if SHIFT is released while
       selecting.
      (ImageViewKeyboardHandler.handle_event): Make selection rectangle
       disappear after pixels are assigned to a class.
      (ImageView._select_rectangle): Make selection rectangle continue to be
       displayed until the next GUI event (the default mpl behavior is for it
       to disappear).

2013-12-11	tboggs <tboggs@users.sourceforge.net>

    Completed initial implementation of pixel class labeling.

    * graphics/spypylab.py:
      (MplCallbacks.show_events): New boolean class attribute that indicates
       whether matplotlib events should be printed to the console.
      (ImageViewKeyboardHandler.on_key_release): Check whether selector exists.
      (ImageViewKeyboardHandler.handle_event):
       - Check whether selector exists.
       - Call self.view.label_region.
      (ImageView.init_callbacks): Only create selector if settings say so.
      (ImageView.label_region): New method to reassign image pixel class IDs.
    * spectral.py (SpySettings): Added imshow_enable_rectangle_selector.
      
2013-12-10	tboggs <tboggs@users.sourceforge.net>

    Partial implementation of pixel class labeling.

    * graphics/spypylab.py:
      (MplCallback.children): New member list for child callbacks.
      (ImageViewKeyboardHandler.__init__): Add child key release handler.
      (ImageViewKeyboardHandler.on_key_release): New method.
      (ImageViewKeyboardHandler.handle_event): Handling for pixel labeling.